--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,22 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:layout_margin="5dp"
-        app:cardElevation="6dp">
+        app:cardElevation="6dp"
+        >
 
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/card_background"
+                android:contentDescription="Card background"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp">
+            tools:layout_editor_absoluteY="1dp"
+            android:background="@android:color/transparent"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,6 +46,7 @@
                     android:layout_height="match_parent"
                     android:padding="10dp"
                     android:textSize="20sp"
+                    android:textColor="#FFFFFF"
                     android:ellipsize="end"
                     android:lines="1"
                     android:text="Llama Lamphhhhhhhhhhhhhhhh" />
@@ -42,6 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
+                    android:textColor="#FFFFFF"
                     android:gravity="right"
                     android:textSize="15dp"
                     android:text="0.00" />
@@ -54,6 +69,7 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:gravity="right"
+                android:textColor="#FFFFFF"
                 android:lines="1"
                 android:paddingLeft="60dp"
                 android:paddingRight="12dp"
@@ -62,6 +78,6 @@
                 android:textSize="10dp"
                 android:text="https://www.amazon.com/what the doing dddddddddddddddddd" />
         </LinearLayout>
-
+        </FrameLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
